# cache-dit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CNAME  CONTRIBUTE.md  LICENSE  MANIFEST.in  README.md  README_CN.md  SERVING.md  cogvideo.txt  cogview3.txt  cogview4.txt  collect_env.py  dynamic_sp_no_cache_todo.md  inspect_cogvideo_model.py  inspect_cogview_architecture.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  verify_pixart_layers.py
.github/: copilot-instructions.md
.github/workflows/: build-wheel.yml  build_wheel.yml  check-mkdocs.yml  cpu-tests.yml  gpu-tests.yml  issue.yml  run_cpu_test.yml
bench/: .gitignore  README.md  bench.py  bench.sh  bench_distill.py  bench_distill.sh  bench_fast.sh  cache_config.yaml  cache_config_dbp.yaml  eval.py  eval.sh  metrics.sh  metrics_distill.sh  metrics_fast.sh  perf.py  plot.py  utils.py
docs/: .gitignore  BENCHMARK.md  BlockAdapter.md  COMMUNITY.md  CONTRIBUTE.md  Cache-DiT_Serving_实现详解.md  DBCache.md  EXAMPLES.md  FAQ.md  PROFILER.md  README.md  README_CN.md  SERVING.md  SUPPORTED.md  USER_GUIDE.md  User_Guide.md  block_adapter.md  community_optimization.md  for_diffusers.md
docs/benchmark/: ASCEND_NPU.md  HYBRID_CACHE.md  NVIDIA_GPU.md
docs/developer_guide/: PRE_COMMIT.md  SUPPORT_NEW_MODEL.md
docs/papers/: paper.tex
docs/supported_matrix/: ASCEND_NPU.md  NVIDIA_GPU.md
docs/user_guide/: AMD_GPU.md  API_DOCS.md  ASCEND_NPU.md  ATTENTION.md  CACHE_API.md  CACHE_MANAGEMENT.md  COMPILE.md  CONTEXT_PARALLEL.md  CUDA_GRAPH.md  DBCACHE_DESIGN.md  ENV.md  EXTRA_PARALLEL.md  HYBRID_PARALLEL.md  INSTALL.md  LOAD_CONFIGS.md  METRICS.md  OFFLOAD.md  OVERVIEWS.md  PROFILER.md  QUANTIZATION.md  RAY.md  SERVING.md  TENSOR_PARALLEL.md
examples/: .gitignore  README.md  base.py  config.yaml  generate.py  helpers.py  parallel_config.yaml  ray_wrapper_example.py  registers.py  requirements.txt  run_cogvideox.py  run_flux.py  run_flux_adapter.py  run_flux_fill.py  run_flux_kontext.py  run_hunyuan_video.py  run_mochi.py  run_qwen_image.py  run_qwen_image_adapter.py  run_qwen_image_edit.py  run_qwen_image_llapi.py  run_qwen_image_uapi.py  run_wan.py  run_wan_2.2.py  run_wan_flf2v.py  utils.py
examples/adapter/: run_flux_adapter.py  run_qwen_image_adapter.py
examples/api/: run_cache_refresh.py  run_cache_refresh_flux.py  run_cache_refresh_wan_2.2.py  run_cpu_offload.py  run_disable_cache.py  run_steps_mask.py  run_transformer_only.py  run_unified_api.py  run_v2_api.py  test_dynamic_sp_1gpu_flux.py  test_dynamic_sp_flux.py
examples/configs/: _flash_2.yaml  cache.yaml  cache_dmd.yaml  cache_dmd_svdq.yaml  cache_foca.yaml  combined.yaml  dynamic_sp.yaml  dynamic_sp_1gpu.yaml  dynamic_sp_2gpu.yaml  dynamic_sp_4gpu.yaml  flash_2.yaml  hybrid.yaml  parallel.yaml  parallel_2d.yaml  parallel_3d.yaml  parallel_svdq.yaml  parallel_uaa.yaml  parallel_usp.yaml  quantize.yaml  quantize_extra.yaml  quantize_plan.yaml  quantize_plan_tp.yaml  quantize_svdq.yaml  quantize_svdq_few_shot.yaml  quantize_svdquant.yaml
examples/parallelism/: .gitignore  run.sh  run_chroma_cp.py  run_chroma_tp.py  run_chrono_edit.py  run_cogvideox_1.5.py  run_cogvideox_1.5_cp.py  run_cogvideox_1.5_tp.py  run_cogview3_plus.py  run_cogview3_plus_cp.py  run_cogview3_plus_tp.py  run_cogview4.py  run_cogview4_cp.py  run_cogview4_tp.py  run_consisid.py  run_dit_xl_cp.py  run_flux2_cp.py  run_flux2_edit_tp.py  run_flux2_tp.py  run_flux_cp.py  run_flux_cp_npu.py  run_flux_nunchaku_cp.py  run_flux_nunchaku_ulysses.py  run_flux_tp.py  run_flux_ulysses.py  run_hunyuan_dit_tp.py  run_hunyuan_image_2.1_cp.py  run_hunyuan_image_2.1_tp.py  run_hunyuan_video_cp.py  run_hunyuan_video_tp.py  run_hyimage21_tp.py  run_hyimage_tp.py  run_hyvideo_tp.py  run_kandinsky5_t2v_cp.py  run_kandinsky5_t2v_tp.py  run_ltx_video_cp.py  run_ltx_video_tp.py  run_lumina2_tp.py  run_mochi.py  run_mochi_tp.py  (+23 more)
examples/pipeline/: .gitignore  run_allegro.py  run_amused.py  run_auraflow.py  run_chroma.py  run_chrono_edit.py  run_cogvideox.py  run_cogvideox_1.5.py  run_cogview3_plus.py  run_cogview4.py  run_consisid.py  run_cosmos.py  run_dit_xl.py  run_easyanimate.py  run_flux.py  run_flux2.py  run_flux_fill.py  run_flux_kontext.py  run_flux_nunchaku.py  run_hidream.py  run_hunyuan_dit.py  run_hunyuan_image_2.1.py  run_hunyuan_image_3.0.py  run_hunyuan_video.py  run_hunyuan_video_1_5.py  run_kandinsky5_t2v.py  run_longcat_video.py  run_ltx_video.py  run_lumina2.py  run_mochi.py  run_omnigen_v1.py  run_ovis_image.py  run_pixart_alpha.py  run_pixart_sigma.py  run_prx_t2i.py  run_qwen_image.py  run_qwen_image_controlnet_inpaint.py  run_qwen_image_edit.py  (+13 more)
requirements/: core.txt  metrics.txt  quantization.txt
tests/: .gitignore  README.md  cache_config.yaml  run_chrono_edit.py  run_qwen_image_cp_naive.py  test_cache_loader.py  test_chrono_edit.py  test_chrono_edit_cp_native.py  test_forward_pattern.py  test_metrics.py  test_pattern_3_4_5.py  test_qwen_image_cp_native.py  test_taylorseer.py  test_wan_2.2_i2v.py
tools/: build_fast.sh  build_releases.sh  nvcc  release_workspace.py  repair_wheel_platform_tag.py
(+604 files in other folders)
