[project]

name = "cache_dit"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{name = "DefTruth, vipshop.com, etc."}]
description = "A Unified and Flexible Inference Engine with Cache Acceleration, Parallelism and Quantization for 🤗Diffusers"
maintainers = [{name="DefTruth, vipshop.com, etc"}] 
readme = "README.md" 

dependencies = [
    "pyyaml",
    "torch>=2.7.1",
    "diffusers>=0.35.1",
    "transformers>=4.55.2",
]

[project.optional-dependencies]

parallelism = [
    "einops>=0.8.1",
]

quantization = [
    "torchao>=0.14.1",
    "bitsandbytes>=0.48.1"
]

metrics = [
    "scipy",
    "scikit-image",
    "image-reward",
    "lpips==0.1.4",
]

dev = [
    "packaging",
    "pre-commit",
    "pytest>=7.0.0,<8.0.0",
    "pytest-html",
    "expecttest",
    "hypothesis",
    "accelerate",
    "peft",
    "protobuf",
    "sentencepiece",
    "opencv-python-headless",
    "ftfy",
    "scikit-image",
]

all = [
    "cache-dit[parallelism]",
    "cache-dit[quantization]",
    "cache-dit[metrics]",
]

[project.urls]

Repository = "https://github.com/vipshop/cache-dit"
Homepage = "https://github.com/vipshop/cache-dit" 
GitHub = "https://github.com/vipshop/cache-dit"

[project.scripts]

cache-dit-metrics-cli = "cache_dit.metrics:main"

[build-system]

requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.black]

line-length = 80
target-version = ["py310"]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers", rev = "df8dd778177c3d2272f74cbebd880d7abd9f5ec9" }
