[project]

name = "cache_dit"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{name = "DefTruth, vipshop.com, etc."}]
description = "A PyTorch-native and Flexible Inference Engine with Hybrid Cache Acceleration and Parallelism for 🤗DiTs."
maintainers = [{name="DefTruth, vipshop.com, etc"}] 
readme = "README.md" 

dependencies = [
    "pyyaml",
    "torch>=2.7.1",
    "diffusers>=0.36.0",
    "transformers>=4.55.2",
]

[project.optional-dependencies]

parallelism = [
    "einops>=0.8.1",
]

quantization = [
    "torchao>=0.14.1",
    "bitsandbytes>=0.48.1"
]

metrics = [
    "scipy",
    "scikit-image",
    "image-reward",
    "lpips==0.1.4",
]

serving = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "peft",
]

dev = [
    "packaging",
    "pre-commit",
    "pytest>=7.0.0,<8.0.0",
    "pytest-html",
    "expecttest",
    "hypothesis",
    "accelerate",
    "peft",
    "protobuf",
    "sentencepiece",
    "opencv-python-headless",
    "ftfy",
    "scikit-image",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-api-autonav",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-gen-files",
    "mkdocs-awesome-nav",
    "mkdocs-glightbox",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "regex",
    "ruff",
    "pydantic",
]

all = [
    "cache-dit[parallelism]",
    "cache-dit[quantization]",
    "cache-dit[metrics]",
    "cache-dit[serving]",
]

[project.urls]

Repository = "https://github.com/vipshop/cache-dit"
Homepage = "https://github.com/vipshop/cache-dit" 
GitHub = "https://github.com/vipshop/cache-dit"

[project.scripts]

cache-dit-metrics-cli = "cache_dit.metrics:main"

[build-system]

requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.black]

line-length = 80
target-version = ["py310"]
